@@ -1045,7 +1045,7 @@ static int log_script(request_rec *r, cgid_server_conf * conf, int ret,
             break;
         }
         rv = apr_bucket_read(e, &buf, &len, APR_BLOCK_READ);
-        if (!APR_STATUS_IS_SUCCESS(rv) || (len == 0)) {
+        if (rv != APR_SUCCESS || (len == 0)) {
             break;
         }
         if (first) {
@@ -1150,7 +1150,7 @@ static void discard_script_output(apr_bucket_brigade *bb)
             break;
         }
         rv = apr_bucket_read(e, &buf, &len, APR_BLOCK_READ);
-        if (!APR_STATUS_IS_SUCCESS(rv)) {
+        if (rv != APR_SUCCESS) {
             break;
         }
     }
@@ -1707,7 +1707,7 @@ static apr_status_t handle_exec(include_ctx_t *ctx, ap_filter_t *f,
                         SSI_EXPAND_LEAVE_NAME);
 
             rv = include_cmd(ctx, f, bb, parsed_string);
-            if (!APR_STATUS_IS_SUCCESS(rv)) {
+            if (rv != APR_SUCCESS) {
                 ap_log_rerror(APLOG_MARK, APLOG_ERR, 0, r,
                               "execution failure for parameter \"%s\" "
                               "to tag exec in file %s", tag, r->filename);
@@ -1722,7 +1722,7 @@ static apr_status_t handle_exec(include_ctx_t *ctx, ap_filter_t *f,
                         SSI_EXPAND_DROP_NAME);
 
             rv = include_cgi(ctx, f, bb, parsed_string);
-            if (!APR_STATUS_IS_SUCCESS(rv)) {
+            if (rv != APR_SUCCESS) {
                 ap_log_rerror(APLOG_MARK, APLOG_ERR, 0, r, "invalid CGI ref "
                               "\"%s\" in %s", tag_val, file);
                 SSI_CREATE_ERROR_BUCKET(ctx, f, bb);
